--- a/Squids-Movies-App/SquidsMovieApp.WPF/ParticipantPreviewPage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/ParticipantPreviewPage.xaml
@@ -95,7 +95,11 @@
                 </Grid>
             </Grid>
             <!--Footer-->
-            <ContentPresenter Grid.Row="2" ContentTemplate="{StaticResource Footer}" />
+            <DockPanel Grid.Column="0" Grid.Row="2" LastChildFill="False" Background="CadetBlue" Height="55">
+                <Button Width="125" Height="25" Content="Exit" DockPanel.Dock="Right" Margin="0,0,15,0" Click="ExitBtnClicked"/>
+                <Button Width="125" Height="25" Content="Logout" DockPanel.Dock="Right" Margin="0,0,10,0" Click="LogoutBtnClicked"/>
+                <TextBlock Height="25" DockPanel.Dock="Left" Margin="15,0,15,0" Foreground="PowderBlue" Text="Team 8 - 'The Madly Squids' - Project for Telerik Academy Alpha Database course - 2018 "/>
+            </DockPanel>
         </Grid>
     </ScrollViewer>
 </Page>
