Displaying all movies now working

--- a/Squids-Movies-App/SquidsMovieApp.WPF/BrowseMoviesPage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/BrowseMoviesPage.xaml
@@ -46,6 +46,7 @@
                 <Grid Name="MovieDisplayGrid" Margin="20,5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
