--- a/Squids-Movies-App/SquidsMovieApp.WPF/BrowseMoviesPage.xaml
+++ b/Squids-Movies-App/SquidsMovieApp.WPF/BrowseMoviesPage.xaml
@@ -39,11 +39,12 @@
                     <TextBlock Name="UserBalanceNav" Text="{Binding MoneyBalance}"/>
                     <Button Click="CartBtnClicked" Margin="15,0,0,0" Width="50" Height="25" Content="Cart"/>
                     <Button Name="UserProfileNav" Click="ProfileBtnClicked" Margin="15,0,0,0" Width="50" Height="25" Content="Profile"/>
+                    <Button IsEnabled="False" Margin="15,0,0,0" Width="80" Height="25" Content="Browse"/>
                 </StackPanel>
             </Grid>
             <!--Main-->
-            <ScrollViewer Grid.Column="0" Grid.Row="1">
-                <Grid Margin="20,5">
+            <ScrollViewer Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <Grid Margin="20,5" Grid.Column="0" Grid.Row="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -65,10 +66,11 @@
                             <Button Click="FilterBtnClicked" HorizontalAlignment="Left" Width="150" Margin="0,0,0,10" Content="Filter"/>
                         </StackPanel>
                         <StackPanel Grid.Row="0" Grid.Column="1">
-                            <TextBlock FontWeight="Bold" FontSize="20">PDF</TextBlock>
+                            <TextBlock FontWeight="Bold" FontSize="17">Generate PDF file for all available movies</TextBlock>
+                            <Button Name="MoviesAsPdfNav" HorizontalAlignment="Left" Click="MoviePdfBtnClicked" Margin="0,10,0,0" Width="80" Height="25" Content="Generate"/>
                         </StackPanel>
                     </Grid>
-                    <Grid Name="MovieDisplayGrid" Grid.Row="1">
+                    <Grid Grid.Row="1" Name="MovieDisplayGrid" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
